--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -137,8 +137,16 @@
       }
     }
     &__sponsor {
-      width: 80px;
       margin-left: 15px;
+      &--main {
+        width: 70px;
+      }
+      &--sub {
+        width: 50px;
+      }
+      &--extra_sub {
+        width: 30px;
+      }
     }
     &__divider {
       width: 2px;
