--- a/src/assets/sass/website/containers/tournaments/tournament-details.scss
+++ b/src/assets/sass/website/containers/tournaments/tournament-details.scss
@@ -141,8 +141,16 @@
     }
   }
   &__sponsor {
-    width: 80px;
     margin-left: 15px;
+    &--main {
+      width: 70px;
+    }
+    &--sub {
+      width: 60px;
+    }
+    &--extra_sub {
+      width: 50px;
+    }
   }
   &__divider {
     width: 2px;
