--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -62,3 +62,10 @@
     content: none !important;
   }
 }
+.register-question-modal-body {
+  .multiselect__content-wrapper {
+    display: none !important;
+    height: 0 !important;
+    max-height: 0 !important;
+  }
+}
