--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -87,7 +87,16 @@ h6,
 }
 .description > h1 > span > p > *,
 .description > h2 > span > p > *,
-.description > h3 > span > p > * {
+.description > h3 > span > p > *,
+.description > h4 > span > p > *,
+.description > h5 > span > p > *,
+.description > h6 > span > p > *,
+.description > h1,
+.description > h2,
+.description > h3,
+.description > h4,
+.description > h5,
+.description > h6 {
   color: black !important;
   background-color: transparent !important;
 }
