--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -69,7 +69,31 @@
       clip-path: inset(0 0 0 0);
     }
   }
-
+  &__custom-button-wrapper {
+    width: 190px;
+    max-width: 190px;
+    height: 52px;
+    cursor: pointer;
+    &__outside {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background: $solid-header;
+      border: 2px solid $primary;
+      color: $primary;
+      border-radius: 10px;
+      font-size: 1.3rem;
+      transition: all 0.2s ease;
+      display: flex !important;
+      justify-content: center;
+      align-items: center;
+    }
+    @include is-mobile {
+      display: flex !important;
+      justify-content: flex-end;
+      align-items: center;
+    }
+  }
   &__content {
     width: 100%;
     padding: 0 15% 5vh 15%;
@@ -81,7 +105,6 @@
     }
     &__breadcrumb {
       font-size: 1.8rem;
-      margin-bottom: 50px;
       padding-left: 15px;
       a {
         text-decoration: none;
