--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -24,14 +24,15 @@
     }
   }
   &--show-small {
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    transition: all 0.5s ease;
-    height: fit-content;
-    max-height: 120px;
+    // display: flex;
+    // justify-content: center;
+    // padding: 0;
+    transition: all 0.3s ease;
+    // height: fit-content;
+    height: 130px;
+    padding: 20px;
     @include is-mobile {
-      max-height: 80px;
+      height: 210px;
     }
   }
   &--hide {
@@ -95,6 +96,24 @@
         }
       }
     }
+  }
+  &__social-media-icon:nth-child(1) {
+    margin-left: 0;
+  }
+  &__social-media-icon {
+    height: 25px;
+    margin: 0 10px;
+    cursor: pointer;
+  }
+  &__logo {
+    height: 90%;
+  }
+  &__divider {
+    height: 90%;
+    width: 2px;
+    margin: 0 30px;
+    cursor: pointer;
+    background: white;
   }
 }
 .styled-title {
