--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -6,12 +6,12 @@
   color: white;
   position: fixed;
   bottom: 0;
-  transition: all 0.5s ease;
+  // transition: all 0.5s ease;
   &--show-large {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.5s ease;
+    // transition: all 0.5s ease;
     height: fit-content;
     max-height: 420px;
     @include is-tablet {
@@ -27,7 +27,7 @@
     // display: flex;
     // justify-content: center;
     // padding: 0;
-    transition: all 0.3s ease;
+    // transition: all 0.3s ease;
     // height: fit-content;
     height: 130px;
     padding: 20px;
@@ -37,13 +37,13 @@
   }
   &--hide {
     height: 0;
-    transition: all 0.5s ease;
+    // transition: all 0.5s ease;
   }
   &__small-footer {
     width: 80%;
     height: fit-content;
     text-align: center;
-    transition: all 0.5s ease;
+    // transition: all 0.5s ease;
     @include is-tablet {
       width: 85%;
     }
@@ -71,7 +71,7 @@
     width: 70%;
     height: fit-content;
     text-align: center;
-    transition: all 0.5s ease;
+    // transition: all 0.5s ease;
     div:nth-child(1) {
       margin: 22px 0;
       @include is-mobile {
