fix footer position

--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -4,8 +4,8 @@
   width: 100%;
   background-color: #121828;
   color: white;
-  position: fixed;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
   // transition: all 0.5s ease;
   &--show-large {
     display: flex;
