--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -28,7 +28,7 @@
     min-height: 100vh;
     background-image: url("~/website/img/hexagone-pattern.png");
     background-repeat: repeat;
-    padding: 12% 15%;
+    padding: 12% 15% 5% 15%;
     margin-top: -$header-height !important;
     @include is-tablet {
       padding: 40% 10% 20% 10%;
