--- a/src/assets/sass/website/containers/contact.scss
+++ b/src/assets/sass/website/containers/contact.scss
@@ -48,9 +48,8 @@
   &__content {
     width: 100%;
     padding: 5vh 15%;
-    min-height: calc(100vh - 12vh);
+    height: max-content;
     @include is-mobile {
-      min-height: 82vh;
       padding: 5%;
     }
     &__icon {
