--- a/src/assets/sass/website/containers/events.scss
+++ b/src/assets/sass/website/containers/events.scss
@@ -40,9 +40,8 @@
   }
   &__content {
     width: 100%;
-    min-height: 80vh;
-    max-height: 80vh;
-    padding: 0% 15%;
+    height: max-content;
+    padding: 0% 15% 10% 15%;
     h2 {
       margin: 80px 0;
       color: white;
