finish event history

--- a/src/assets/sass/website/shared/event-tabs.scss
+++ b/src/assets/sass/website/shared/event-tabs.scss
@@ -123,6 +123,9 @@
     }
     &__info {
       width: 70%;
+      @include is-mobile {
+        width: 100%;
+      }
       span {
         font-weight: bold;
       }
