--- a/src/assets/sass/website/shared/summit-tabs.scss
+++ b/src/assets/sass/website/shared/summit-tabs.scss
@@ -192,4 +192,22 @@
     grid-column-gap: 10px;
     grid-row-gap: 10px;
   }
+  &__media-image {
+    width: 32%;
+    margin: 0.5%;
+    height: 200px;
+    background-color: rgba($color: $solid-header, $alpha: 0.5);
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 10px;
+    @include is-mobile {
+      width: 100%;
+    }
+    img {
+      border-radius: 10px;
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
