--- a/src/assets/sass/website/shared/event-tabs.scss
+++ b/src/assets/sass/website/shared/event-tabs.scss
@@ -115,6 +115,7 @@
     &__img {
       width: 30%;
       border-radius: 5px;
+      padding-right: 10px;
       @include is-mobile {
         width: 50%;
         display: block;
