--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -96,7 +96,7 @@
   }
   &__content {
     width: 100%;
-    padding: 0 15% 5vh 15%;
+    padding: 5vh 15%;
     height: max-content;
     color: white;
     @include is-mobile {
