--- a/src/assets/sass/website/containers/contact.scss
+++ b/src/assets/sass/website/containers/contact.scss
@@ -7,6 +7,7 @@
   background-repeat: repeat;
   height: 100vh;
   overflow-y: auto;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 5px !important;
     background-color: $accent !important;
