--- a/src/assets/sass/website/containers/events.scss
+++ b/src/assets/sass/website/containers/events.scss
@@ -8,6 +8,7 @@
   position: relative;
   height: 100vh;
   overflow-y: auto;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 5px !important;
     background-color: $accent !important;
