--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -5,6 +5,7 @@
 .home-wrapper {
   height: 100vh;
   overflow-y: auto;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 5px !important;
     background-color: $accent !important;
