--- a/src/assets/sass/website/containers/profile.scss
+++ b/src/assets/sass/website/containers/profile.scss
@@ -9,6 +9,7 @@ $preview-image: 150px;
   background-repeat: repeat;
   height: 100vh;
   overflow-y: auto;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 5px !important;
     background-color: $accent !important;
