--- a/src/assets/sass/website/shared/event-tabs.scss
+++ b/src/assets/sass/website/shared/event-tabs.scss
@@ -138,5 +138,13 @@
     &__description {
       margin-top: 10px;
     }
+    &__placeholder-img {
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
+      @include is-mobile {
+        height: 150px;
+      }
+    }
   }
 }
