fix facebook style in desktop and mobile

--- a/src/assets/sass/website/shared/event-tabs.scss
+++ b/src/assets/sass/website/shared/event-tabs.scss
@@ -92,7 +92,7 @@
   color: white;
   transform: translateY(0px);
   @include is-mobile {
-    width: 80px;
+    width: max-content;
     height: 50px;
     margin: 0;
   }
