--- a/src/assets/sass/website/shared/popup.scss
+++ b/src/assets/sass/website/shared/popup.scss
@@ -30,6 +30,8 @@
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
   @include create-half-hexagone-shape(12px);
