--- a/src/assets/sass/website/shared/summit-tabs.scss
+++ b/src/assets/sass/website/shared/summit-tabs.scss
@@ -48,7 +48,7 @@
       width: 5px !important;
       background-color: $accent !important;
       border-radius: 20px !important;
-      height: 2px;
+      height: 4px;
     }
     &::-webkit-scrollbar-thumb {
       background-color: $primary !important;
@@ -77,7 +77,7 @@
   @include create-hexagone-shape-tab(10px);
   transform: translateY(5px);
   @include is-mobile {
-    width: 80px;
+    width: max-content;
     height: 50px;
     margin: 0;
     font-size: 0.9rem;
@@ -124,6 +124,9 @@
     }
     &__info {
       width: 60%;
+      @include is-mobile {
+        width: 100%;
+      }
       span {
         font-weight: bold;
       }
