--- a/src/assets/sass/website/color-palette.scss
+++ b/src/assets/sass/website/color-palette.scss
@@ -1,5 +1,3 @@
-$primary: #2af3f3;
-$accent: #172532;
-$inactive-header-link: #e7e7e7;
-$solid-header: #121828;
-$placeholder-background: #0a5990;
+$primary: #1c222a;
+$accent: #598cc2;
+$header-item: white;
