--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -3,76 +3,11 @@
 @import "../mixins.scss";
 
 .home-wrapper {
-  height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  &::-webkit-scrollbar {
-    width: 5px !important;
-    background-color: $accent !important;
-    border-radius: 20px !important;
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: $primary !important;
-    border-radius: 20px !important;
-  }
-
-  &__slide {
-    height: 100vh !important;
-    object-fit: cover;
-    cursor: pointer;
-    @include is-mobile {
-      height: 108vh !important;
-    }
-  }
-  &__content {
-    width: 100%;
-    height: max-content;
-    background-image: url("~/website/img/hexagone-pattern.png");
-    background-repeat: repeat;
-    padding: 12% 15% 5% 15%;
-    margin-top: -$header-height !important;
-    @include is-tablet {
-      padding: 40% 10% 20% 10%;
-    }
-    @include is-mobile {
-      padding: 40% 10% 60% 10%;
-    }
-    h2 {
-      margin: 0;
-      color: white;
-      font-size: 2rem;
-    }
-    .row {
-      .col {
-        padding: 5px;
-      }
-    }
-  }
-  &__navLinks {
-    list-style: none;
-    color: white;
-    padding: 20px;
-    margin-bottom: 0;
-    li {
-      display: inline-block;
-      cursor: pointer;
-      padding-right: 20px;
-      transition: all 0.3s ease 0s;
-      color: $inactive-header-link;
-      font-size: 1.5rem;
-      font-weight: lighter;
-    }
-    &--active {
-      color: $primary !important;
-      text-decoration: underline;
-      font-family: "Roboto Bold";
-    }
-  }
-}
-
-.slick-slider {
-  margin-top: -$header-height !important;
+  height: max-content;
+  margin-top: -$header-height;
+  min-height: calc(100vh - #{$footer-height});
   @include is-mobile {
     margin-top: -$header-height-mobile;
+    min-height: calc(100vh - #{$footer-height-mobile});
   }
 }
