--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -1,155 +1,16 @@
 @import "../mixins.scss";
+@import "../variables.scss";
+@import "../color-palette.scss";
 
 .footer-wrapper {
   padding: 20px;
   width: 100%;
-  background-color: #121828;
+  background-color: $primary;
   color: white;
-  // position: absolute;
-  // bottom: 0;
-  // transition: all 0.5s ease;
-  &--show-large {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // transition: all 0.5s ease;
-    height: fit-content;
-    max-height: 420px;
-    @include is-tablet {
-      max-height: 520px;
-    }
-    @include is-mobile {
-      max-height: 450px;
-      padding-top: 10px;
-      padding-bottom: 35px;
-    }
-  }
-  &--show-small {
-    // display: flex;
-    // justify-content: center;
-    // padding: 0;
-    // transition: all 0.3s ease;
-    // height: fit-content;
-    height: 130px;
-    padding: 20px;
-    @include is-mobile {
-      height: 210px;
-    }
-  }
-  &--hide {
-    height: 0;
-    // transition: all 0.5s ease;
-  }
-  &__small-footer {
-    width: 80%;
-    height: fit-content;
-    text-align: center;
-    // transition: all 0.5s ease;
-    @include is-tablet {
-      width: 85%;
-    }
-    @include is-mobile {
-      width: 100%;
-    }
-    &__img-wrapper {
-      display: inline-block;
-      img {
-        max-width: 90px;
-        margin: auto 40px;
-        cursor: pointer;
-        @include is-tablet {
-          max-width: 70px;
-          margin: 15px;
-        }
-        @include is-mobile {
-          max-width: 40px;
-          margin: 15px;
-        }
-      }
-    }
-  }
-  &__large-footer {
-    width: 70%;
-    height: fit-content;
-    text-align: center;
-    // transition: all 0.5s ease;
-    div:nth-child(1) {
-      margin: 22px 0;
-      @include is-mobile {
-        margin: 5px 0;
-      }
-    }
-    @include is-tablet {
-      width: 80%;
-    }
-    @include is-mobile {
-      width: 100%;
-    }
-    &__img-wrapper {
-      display: inline-block;
-      img {
-        max-width: 60px;
-        margin: auto 20px;
-        cursor: pointer;
-        @include is-mobile {
-          max-width: 35px;
-          margin: 5px;
-        }
-      }
-    }
-  }
-  &__social-media-icon:nth-child(1) {
-    margin-left: 0;
-  }
-  &__social-media-icon {
-    height: 25px;
-    margin: 0 10px;
-    cursor: pointer;
-  }
-  &__logo {
-    height: 90%;
-    cursor: pointer;
-  }
-  &__divider {
-    // height: 90%;
-    width: 2px;
-    margin: 0 30px;
-    cursor: pointer;
-    background: white;
-  }
-}
-.styled-title {
-  line-height: 0.5;
-  text-align: center;
-  margin-top: 10px;
-}
-.styled-title span {
-  display: inline-block;
-  position: relative;
-  font-size: 1.3rem;
-}
-.styled-title span:before,
-.styled-title span:after {
-  content: "";
-  position: absolute;
-  height: 3px;
-  border-top: 1.5px solid white;
-  border-bottom: 1.5px solid white;
-  border-radius: 2px;
-  top: 0;
-  width: 10vw;
-  margin-top: 4px;
-}
-.styled-title span:before {
-  right: 100%;
-  margin-right: 15px;
-}
-.styled-title span:after {
-  left: 100%;
-  margin-left: 15px;
-}
 
-.logo_img_custom{
-  display: -webkit-box;
-  height: fit-content;
+  height: $footer-height;
+  padding: 20px;
+  @include is-mobile {
+    height: $footer-height-mobile;
+  }
 }
