--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -3,29 +3,32 @@
 @import "../mixins.scss";
 
 .header-wrapper {
-  position: sticky;
-  top: 0;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: $header-height;
-  z-index: 100;
+  &__social-media {
+    height: $header-height / 2;
+    width: 100%;
+    background-color: $primary;
+    padding: 8px;
+    display: flex;
+  }
+  &__main {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: $header-height;
+    z-index: 100;
+    background: rgba($color: $primary, $alpha: 0.7);
+    @include is-mobile {
+      height: $header-height-mobile;
+    }
+  }
   &__user-section {
     color: $primary !important;
   }
   &__user-section-icon {
     width: 20px;
-  }
-  &--solid {
-    background: $solid-header;
-  }
-  &--gradient {
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.5) 80%,
-      rgba(0, 0, 0, 0) 100%
-    );
   }
   &--desktop {
     display: none;
@@ -47,9 +50,6 @@
     @include is-extra-large-desktop {
       display: none;
     }
-  }
-  @include is-mobile {
-    height: $header-height-mobile;
   }
   &__logo {
     display: flex;
@@ -84,35 +84,43 @@
   &__navLinks {
     list-style: none;
     margin-bottom: 0;
-    margin-left: -10%;
-    text-align: center;
+    text-align: right;
     li {
       display: inline-block;
       cursor: pointer;
+      margin: 0 30px;
       a {
-        padding: 20px 10px;
-        transition: all 0.3s ease 0s;
-        color: $inactive-header-link;
-        font-size: 1.2rem;
-        font-weight: lighter;
-      }
-      &:hover {
-        a {
-          color: $primary;
-        }
+        color: $header-item;
+        position: relative;
       }
     }
-    &--active a {
-      color: $primary !important;
+    &--inactive {
+      font-size: $header-inactive-item-font;
+      &::before {
+        @include header-item-hover-effect(0, $header-item-underline-height);
+      }
+      &:hover::before {
+        @include header-item-hover-effect(
+          $header-item-underline-width,
+          $header-item-underline-height
+        );
+      }
+    }
+    &--active {
+      font-size: $header-active-item-font;
+      font-weight: bold;
+      &::before {
+        @include header-item-hover-effect(
+          $header-item-underline-width,
+          $header-item-underline-height
+        );
+      }
     }
   }
   &__dashboard-img {
     width: 30px;
     margin-right: 15px;
   }
-}
-.hi-active {
-  color: $primary !important;
 }
 .hamburger-menu {
   font-size: 30px;
@@ -151,7 +159,7 @@
   }
   &__text {
     &--active {
-      color: $primary !important;
+      color: $header-item;
     }
     @include is-mobile {
       font-size: 1.6rem !important;
