finish contact hero and custom form fields

--- a/src/assets/sass/website/color-palette.scss
+++ b/src/assets/sass/website/color-palette.scss
@@ -1,3 +1,8 @@
 $primary: #1c222a;
 $accent: #598cc2;
+$dark-background: #151a20;
+$form-background: #222d3a;
 $header-item: white;
+$light-white: rgba(#fff, 0.2);
+$underline-cyan: #59c0b2;
+$light-gray: #9f9f9f;
