--- a/src/assets/sass/website/shared/hero.scss
+++ b/src/assets/sass/website/shared/hero.scss
@@ -1,4 +1,4 @@
-@import "../../mixins.scss";
+@import "../mixins.scss";
 
 .hero-wrapper {
   width: 100%;
@@ -6,7 +6,8 @@
   padding-top: $header-height;
   background-attachment: fixed;
   @include cover-image("~/images/hero.jpg");
-  @include is-mobile {
+  @include is-extra-small-mobile {
     padding-top: $header-height-mobile;
+    height: max-content;
   }
 }
