--- a/src/assets/sass/website/containers/contact.scss
+++ b/src/assets/sass/website/containers/contact.scss
@@ -2,6 +2,10 @@
 @import "../variables.scss";
 @import "../mixins.scss";
 
-.home-wrapper {
+.contact-wrapper {
   @include initializePageStyle;
+
+  &__contact_box {
+    padding-bottom: 100px;
+  }
 }
